--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
     max-width: 960px;
     font-family: 'Nanum Gothic', sans-serif;
 }
+
 header{
     margin-right: auto;
     margin-left: auto;
@@ -24,6 +25,9 @@ h1{
 h2{
     margin-top: 3vh;
     text-shadow: 1px 1px white;
+}
+h3{
+    text-align: center;
 }
 body{
     margin-right: auto;
